<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/greyBrightest"
    tools:context="ch.ccapps.android.zeneggen.activity.User.RegisterActivity">

    <EditText
        android:id="@+id/profile_name"
        android:paddingTop="40dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/register_profilename"/>
    <EditText
        android:id="@+id/email"
        android:paddingTop="40dp"
        android:layout_marginBottom="40dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/register_email"/>

    <Button

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:onClick="onRegister"
        android:background="@drawable/zeneggen_button"
        android:text="@string/register_register"/>

</LinearLayout>
