<?xml version="1.0" encoding="utf-8"?>

<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="ch.ccapps.android.zeneggen.activity.User.EditProfileActivity"
    android:id="@+id/activity_profile"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

        android:id="@+id/activity_profile_ll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile_pic"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:layout_marginTop="10dp"
            android:onClick="onEditProfileImage" />

        <ScrollView
            android:id="@+id/editProfileScrollview"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/profile_ll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="14dp">


                <TextView xmlns:android="http://schemas.android.com/apk/res/android"
                    android:id="@+id/profile_name_descr"
                    style="@style/Text.Normal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:text="@string/profile_profilename" />

                <EditText
                    android:id="@+id/et_profile_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/brownBright"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:inputType="text"
                    android:maxLines="1"/>

                <View style="@style/SettingsLine.margin" />

                <TextView xmlns:android="http://schemas.android.com/apk/res/android"
                    android:id="@+id/email_descr"
                    style="@style/Text.Normal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:text="@string/profile_email" />

                <EditText
                    android:id="@+id/et_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:inputType="textEmailAddress" />

                <View style="@style/SettingsLine.margin" />

                <TextView xmlns:android="http://schemas.android.com/apk/res/android"
                    android:id="@+id/firstname_descr"
                    style="@style/Text.Normal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:text="@string/profile_firstname" />

                <EditText
                    android:id="@+id/et_firstname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:inputType="textCapWords" />

                <View style="@style/SettingsLine.margin" />


                <TextView xmlns:android="http://schemas.android.com/apk/res/android"
                    android:id="@+id/lastname_descr"
                    style="@style/Text.Normal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:text="@string/profile_lastname" />

                <EditText
                    android:id="@+id/et_lastname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:inputType="textCapWords"/>

                <View style="@style/SettingsLine.margin" />

                <TextView xmlns:android="http://schemas.android.com/apk/res/android"
                    android:id="@+id/phone_number_descr"
                    style="@style/Text.Normal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:text="@string/profile_phonenbr" />

                <EditText
                    android:id="@+id/et_phone_number"

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:inputType="phone" />

            </LinearLayout>


        </ScrollView>


    </LinearLayout>


    <android.support.design.widget.FloatingActionButton
        android:id="@+id/floating_action_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_margin="@dimen/fab_margin"
        android:clickable="true"
        android:onClick="onFinishedEditing"
        android:src="@drawable/ic_done" />

</android.support.design.widget.CoordinatorLayout>
